# RobotTrajectoryAnalyzerCpp

./: .gitignore  README.md  UIMACPP.md  jointnames.txt  makefile
descriptors/: AccelerationAnnotator.xml  JointStatePopulator.xml  MovementAnnotator.xml  MovementDirectionAnnotator.xml  OscillationAnnotator.xml  Pipeline.xml  TypeSystem.xml
descriptors/analysis_engines/: ControllerPipeline.xml  MovementControllerPipeline.xml  MovementPipeline.xml  Pipeline.xml
descriptors/annotators/: AccelerationAnnotator.xml  ControllerAnnotator.xml  ErrorAnnotator.xml  JointStatePopulator.xml  MovementAnnotator.xml  MovementDirectionAnnotator.xml  OscillationAnnotator.xml  PlannedMovementAnnotator.xml  RobotStateAnnotator.xml  SelfCollisionAnnotator.xml  UnplannedStopAnnotator.xml
descriptors/pipelines/: CollisionPipeline.xml  ControllerPipeline.xml  MovementControllerPipeline.xml  MovementPipeline.xml  Pipeline.xml
descriptors/types/: Acceleration.xml  ControllerError.xml  ControllerInput.xml  DistanceToLimit.xml  JointState.xml  JointTrajectoryPoint.xml  NegativeMovement.xml  Oscillation.xml  PlannedMovement.xml  PositiveMovement.xml  SelfCollision.xml  TaskSpacePosition.xml  UnplannedMovement.xml  UnplannedStop.xml
scripts/: plottopic.sh
src/: AccelerationAnnotator.cpp  AnnotationGateway.cpp  AnnotationGateway.hpp  CMakeLists.txt  JointStatePopulator.cpp  MovementAnnotator.cpp  MovementDirectionAnnotator.cpp  OscillationAnnotator.cpp  StdCoutLogger.cpp  StdCoutLogger.hpp  app.cpp  utils.cpp  utils.hpp
src/MongoUrdf/: CMakeLists.txt  README.md  package.xml
src/MongoUrdf/include/: JointState.hpp  ModelState.hpp  MongoUrdf.hpp
src/MongoUrdf/src/: JointState.cpp  ModelState.cpp  MongoUrdf.cpp
src/annotators/: CMakeLists.txt  package.xml
src/annotators/cmake/: Findmongoclient.cmake  mongoclient.cmake  uima.cmake
src/annotators/include/: AnnotationGateway.hpp
src/annotators/src/: AccelerationAnnotator.cpp  AnnotationGateway.cpp  ControllerAnnotator.cpp  ErrorAnnotator.cpp  JointStatePopulator.cpp  MovementAnnotator.cpp  MovementDirectionAnnotator.cpp  OscillationAnnotator.cpp  PlannedMovementAnnotator.cpp  RobotStateAnnotator.cpp  SelfCollisionAnnotator.cpp  UnplannedStopAnnotator.cpp  demo.cpp
src/nodes/: CMakeLists.txt  package.xml
src/nodes/include/: Topics.hpp
src/nodes/src/: Topics.cpp  acceleration_topic.cpp  plot.cpp
src/uimacppext/: CMakeLists.txt  package.xml
src/uimacppext/cmake/: Finduimacpp.cmake
src/uimacppext/include/: AnnotationIterator.hpp  StdCoutLogger.hpp  uimautils.hpp  utils.hpp
src/uimacppext/src/: AnnotationIterator.cpp  StdCoutLogger.cpp  uimautils.cpp  utils.cpp
types/: DirectionalMovement.xml  JointTrajectoryPoint.xml  Movement.xml  NegativeMovement.xml  Oscillation.xml  PositiveMovement.xml
