<package>
  <name>rta_annotators</name>
  <maintainer email="ahoereth@uos.de">Alexander Höreth</maintainer>
  <description>Robot Trajectory Analyzer Annotators</description>
  <version>0.0.0</version>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>uimacppext</build_depend>
</package>
