<package>
  <name>rta_annotators</name>
  <maintainer email="ahoereth@uos.de">Alexander Höreth</maintainer>
  <description>Robot Trajectory Analyzer Annotators</description>
  <version>0.0.0</version>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uimacpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>uimacppext</build_depend>
  <build_depend>mongourdf</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>mongoclient</run_depend>
</package>
