<package>
  <name>rta_nodes</name>
  <maintainer email="ahoereth@uos.de">Alexander Höreth</maintainer>
  <description>Robot Trajectory Analyzer ROS Nodes</description>
  <version>0.0.0</version>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>uimacppext</build_depend>
  <build_depend>rta_annotators</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rta_annotators</run_depend>
</package>
