<package>
  <name>uimacppext</name>
  <maintainer email="a.hoereth@gmail.com">Alexander Höreth</maintainer>
  <description>Robot Trajectory Analyzer Annotators</description>
  <version>0.0.0</version>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uimacpp</build_depend>
</package>
